resources/media-store/jellyfin/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - env:
            - name: NODE_NAME
              valueFrom:
                fieldRef:
                  apiVersion: v1
                  fieldPath: spec.nodeName
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.name
            - name: POD_NAMESPACE
              valueFrom:
                fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.namespace
          image: docker.io/jellyfin/jellyfin
          name: jellyfin
          ports:
            - containerPort: 8096
              protocol: TCP
          volumeMounts:
            - mountPath: /data/media/
              name: media
              readOnly: true
            - mountPath: /config
              name: jellyfin-config
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-store
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config
